Bug 1211401 - Use global message manager as parent of <iframe mozbrowser> MM (r=smaug,ahal)