testing/mochitest/b2g_start_script.js
@@ -83,13 +83,7 @@ container.addEventListener('mozbrowsershowmodalprompt', function (e) {
 });
 
 if (outOfProcess) {
-  let specialpowers = {};
-  let loader = Components.classes["@mozilla.org/moz/jssubscript-loader;1"].getService(Ci.mozIJSSubScriptLoader);
-  loader.loadSubScript("chrome://specialpowers/content/SpecialPowersObserver.jsm", specialpowers);
-  let specialPowersObserver = new specialpowers.SpecialPowersObserver();
-
   let mm = container.QueryInterface(Ci.nsIFrameLoaderOwner).frameLoader.messageManager;
-  specialPowersObserver.init(mm);
 
   //Workaround for bug 848411, once that bug is fixed, the following line can be removed
   function contentScript() {
